更新用户反馈，2.1.0基础库
Signed-off-by: 723875993@qq.com <723875993@qq.com>

--- a/pages/help/help.wxml
+++ b/pages/help/help.wxml
@@ -12,9 +12,9 @@
 			</view>
 		</view>
     </view>
-
-
-
+    <i-panel title="">
+      <i-button open-type="feedback" type="ghost">反馈建议</i-button>
+    </i-panel>
 	<view class="weui-footer">
 		<view class="weui-footer__links">
 			<navigator url="../web/web" class="weui-footer__link">Karma617</navigator>
